# diagram-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gradio_app.py  main.py  pyproject.toml  run_tests.py
app/api/: endpoints.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: diagram_service.py  diagram_tools.py  llm_service.py
tests/: test_examples.py
